--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,212 @@
 }
 
 
+.content {
+  width: 100vw;
+  top: 3.5rem;
+  margin: 0;
+  position: absolute;
+  opacity: 0;
+}
 
+#content_blocks, #content_device, #content_code, #content_console, #content_files, #content_device, #content_programs, #content_mqtt, #content_iot, #content_databoard {
+  height: calc(100vh - 3.5rem);
+}
+#content_device, #content_code, #content_console {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+#content_console #file-boxes button {
+  white-space: nowrap;
+  margin-left: .25rem;
+  cursor: pointer;
+  padding: 0.5rem 0.75rem;
+  color: #327ae7;
+  border: 1px solid #327ae7;
+  border-radius: 1.5rem;
+  background-color: #fff;
+  font-size: 0.8rem;
+}
+
+#content_console {
+  flex-direction: column;
+  align-items: center;
+}
+#content_console #term{
+  padding: 0.5em;
+  background: #000;
+  margin: .75rem 0;
+  overflow: hidden;
+  border-radius: .5rem;
+  transition: box-shadow ease .125s;
+  box-shadow: 0 0.125rem .25rem rgba(0,0,0,.5);
+  overscroll-behavior: none; /*disable chrome pull to refresh */
+}
+
+#content_console #term.on{
+  box-shadow: -0.25rem 0rem .75rem #6aa8fb, .25rem .25rem .75rem #7b49ad;
+}
+#content_console button {
+  line-height: 1.5rem;
+  font-size: 0.8rem;
+}
+#content_console > div, #content_console > div > span {
+  display: inline-flex;
+  align-items: center;
+}
+#file-boxes {
+  flex-wrap: wrap;
+  justify-content: center;
+  user-select: none;
+}
+
+/* Files */
+#content_files {
+  grid-template-columns: 18rem calc(100% - 18rem);
+}
+#file-boxes #file-header, #file-boxes #file-status  {
+  padding: 0 .25em 0 .5em;
+  text-align: center;
+}
+#file-boxes #file-header  {
+  display: flex;
+  height: 2.5rem;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: bold;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+#file-boxes #file-header > span {
+  flex-grow: 2;
+}
+#file_save_as {
+  height: 2.5rem;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  padding: 0 .5rem 0 1.85rem
+}
+#file_save_as.py #updateXMLButton, #file_save_as.py #generated2DeviceButton {
+  display:none;
+}
+#file_save_as.bipes-xml #editor2DeviceButton, #file_save_as.bipes-xml #generated2DeviceButton {
+  display:none;
+}
+#file_save_as.bipes-py #editor2DeviceButton, #file_save_as.bipes-py #updateXMLButton {
+  display:none;
+}
+#file_save_as input {
+  font-weight: bold;
+  border-left: 1px solid #ccc;
+  padding-left: .5rem;
+}
+#file-boxes #file-status {
+  height: 1.5rem;
+  line-height: 1.5rem;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  color:#666;
+  font-size: 0.85rem;
+  overflow: hidden;
+  font-weight: bold;
+  background: #f7f7f7;
+}
+
+#filesPanel {
+  display: block;
+  height: calc(100vh - 8rem);
+  overflow-y: auto;
+  padding: 0.25rem 0.5rem;
+  border-right: 1px solid #ccc;
+}
+#filesPanel h2, .account-panel h2 {
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  height: 2.5rem;
+}
+#fileList > div, #fileTemplate > div, #blocks2Code > div, #ProjectList > div{
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  margin: 0.25rem 0;
+  padding: 0.25rem;
+  border-radius: .25rem;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  min-height: 2rem;
+  font-size: 0.9rem;
+}
+#fileList > div > div:last-child, #ProjectList > div > div:last-child{
+  flex-shrink: 0;
+}
+#fileList .runText, #ProjectList .runText {
+  width: 100%;
+  font-family: monospace;
+}
+#fileTemplate > div, #blocks2Code > div  {
+  align-items: center;
+  word-break: break-word;
+  font-family: monospace;
+}
+#fileList > div > div, #ProjectList > div > div {
+  display: inline-flex;
+  align-items: center;
+  word-break: break-word;
+}
+#fileList .runText > span, #blocks2Code > div > span {
+  font-size: 0.8rem;
+  border: 1px solid #7b49ad;
+  border-radius: .75rem;
+  padding: .175rem .25rem;
+  color: #7b49ad;
+  margin-left: .25rem;
+  font-weight: bold;
+  word-break: keep-all;
+  font-family: sans-serif;
+}
+#fileList #runIcon {
+  filter: brightness(0)
+}
+#filesPanel details, .account-panel summary {
+  overflow: hidden;
+  transition: .125s ease border;
+}
+#filesPanel summary, .account-panel summary {
+  -webkit-tap-highlight-color: transparent;
+  white-space: normal;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#filesPanel summary > h2:before, .account-panel summary > h2:before {
+  content: "\1433";
+  margin-right: .5rem;
+  transition: transform .25s ease;
+  display:inline-block;
+  font-weight: normal;
+  font-size: 0.8rem;
+  line-height: 1rem;
+}
+#filesPanel details[open] summary > h2:before, .account-panel details[open] summary > h2:before {
+  transform: rotateZ(90deg);
+}
+#ProjectList  > div {
+  transition: box-shadow ease .125s, background-color linear .125s, border-color linear .125s, color linear .125s;
+}
+#ProjectList > .current {
+    box-shadow: 0 0.125em 0.25em rgba(0,0,0,0.2);
+    background: #3298dc;
+    color: #fff;
+    border-color: #3298dc;
+}
+#ProjectList .current span {
+  filter: invert(1);
+}
 
 /*----------------------------------------*/
 /*  1.  Theme default CSS
